# gabriel

./: index copy.html  index-exemplo.html  index.html  index.js  pyproject.toml  release.py  seo.html  seo.txt  style.css  termos.html
assets/css/: custom-bootstrap.css  responsive.css  style.css  styles.min.css
assets/fonts/: stylesheet.css
excluir/: a.html  b.html  c.html
script-scluir/: a.py  ola copy.py  ola.py  release.py  release2.py
scripts/: minify.py  release.py
